fix: nav align items

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ header {
 
 .link .flex {
   gap: 1rem;
+  align-items: center;
 }
 
 /* MAIN */
